--- a/css/course.css
+++ b/css/course.css
@@ -54,6 +54,7 @@
     display: flex;
     justify-content: space-between;
     gap: 40px;
+    box-shadow: rgb(0 0 0 / 20%) 0px 1px 5px 0px;
 }
 
 .challenge__item:last-child{
